--- a/style.css
+++ b/style.css
@@ -11,13 +11,12 @@
 	--rubik-font               : "Rubik", sans-serif;
 }
 
-body,
+/* body, */
 html {
 	background-color   : var(--main-bg-color);
 	font-family        : var(--rubik-font);
 	color              : var(--gr-text-color);
 	font-size          : 10px;
-	line-height        : 1.3;
 	user-select        : none;
 }
 
@@ -46,7 +45,12 @@ semibold,
 }
 
 p {
-	font-size   : 2.4rem;
+	font-size     : 2.4rem;
+	line-height   : 1.2;
+}
+
+img {
+	pointer-events   : none;
 }
 
 /* BUTTON 1 */
@@ -63,7 +67,7 @@ p {
 	border-radius         : 20px;
 	min-width             : max-content;
 	color                 : var(--button_text_color);
-	transition            : all .2s linear;
+	transition            : color .2s linear;
 }
 
 .button:hover {
@@ -76,7 +80,7 @@ p {
 	background-color   : var(--button_text_color);
 	border-radius      : 100%;
 	left               : 50%;
-	bottom             : -100%;
+	bottom             : -105%;
 	width              : 30%;
 	height             : 100%;
 	transition         : all .3s ease;
@@ -210,10 +214,11 @@ i {
 
 .container {
 	/* display:      block; */
-	margin      : 0 auto;
-	padding     : 50px 15px;
-	width       : calc(80% + 30px);
-	max-width   : 1566px;
+	margin             : 0 auto;
+	padding            : 50px 15px;
+	width              : calc(80% + 30px);
+	max-width          : 1566px;
+	/* box-shadow      : 1px 0 0 red, -1px 0 0 red; */
 }
 
 
@@ -311,7 +316,8 @@ i {
 
 /* MAIN SECTION */
 
-.sec__main {
+.main {
+	--section_size    : 10px;
 	display           : flex;
 	justify-content   : center;
 	align-items       : center;
@@ -321,7 +327,7 @@ i {
 	line-height       : 1.2;
 }
 
-.sec__main__left {
+.main__left {
 	display          : flex;
 	flex-direction   : column;
 	align-items      : center;
@@ -329,36 +335,42 @@ i {
 	text-align       : center;
 }
 
-.sec__main__left>*:not(:last-child) {
-	margin-bottom   : 40px;
+.main__right {
+	width   : 35%;
 }
 
-.sec__main__line {
+.main__left>*:not(:last-child) {
+	/* margin-bottom   : 40px; */
+	margin-bottom   : calc(var(--section_size) * 4);
+}
+
+.main__line {
 	background-color   : var(--line-transp-blue-color);
 	border-radius      : 40px;
-	height             : 3px;
+	height             : 0.3em;
+	font-size          : inherit;
 }
 
-.sec__main__title {
+.main__title {
 	font-size   : 6.4em;
 }
 
-.sec__main__title>span {
+.main__title>span {
 	color   : var(--logo-color);
 }
 
-.sec__main__desc,
-.sec__main__slog {
+.main__desc,
+.main__slog {
 	font-size   : 4em;
 }
 
-.sec__main__left>button {
-	font-size   : 3.6rem;
+.main__left>button {
+	font-size   : 3.6em;
 	max-width   : max-content;
 	animation   : main_butt_anim 5s infinite linear;
 }
 
-.sec__main__left>button:hover {
+.main__left>button:hover {
 	animation   : none;
 }
 
@@ -410,12 +422,15 @@ i {
 	align-items   : flex-end;
 }
 
-.whoweare__img {}
+.whoweare__img {
+	width   : 100%;
+}
 
 .whoweare__text {
 	text-align    : justify;
 	text-indent   : 30px;
 	margin-left   : 50px;
+	min-width     : 700px;
 }
 
 .whoweare__text span {
@@ -451,26 +466,26 @@ i {
 }
 
 .wedo i {
-	font-size      : 6rem;
-	margin-right   : 2rem;
+	font-size   : 6rem;
+}
+
+.wedo p {
+	margin-left   : 2rem;
 }
 
 .wedo__item {
-	display       : flex;
-	align-items   : center;
-	width         : calc((100% - 5rem * 2) * 0.33333);
-}
-
-.wedo__item:not(:last-child) {
-	margin-right   : 50px;
+	display           : flex;
+	align-items       : center;
+	justify-content   : center;
+	width             : calc((100% - 5rem * 2) * 0.33333);
 }
 
 .wedo__first {
 	display           : flex;
 	justify-content   : space-between;
 	align-items       : center;
+	gap               : 5rem;
 }
-
 
 .wedo__second {
 	justify-content   : center;
@@ -495,32 +510,33 @@ i {
 /* COURSES */
 
 .courses {
-	position      : relative;
-	overflow      : hidden;
-	--python1     : rgba(228, 242, 255, 1);
-	--python2     : rgba(2, 119, 189, 0.2);
-	--python3     : rgba(2, 119, 189, 1);
-	--python4     : rgba(2, 119, 189, .3);
-	--robo1       : rgba(250, 249, 240, 1);
-	--robo2       : rgba(69, 90, 100, 0.2);
-	--robo3       : rgba(69, 90, 100, 1);
-	--robo4       : rgba(69, 90, 100, .3);
-	--treeDmax1   : rgba(240, 249, 250, 1);
-	--treeDmax2   : rgba(0, 131, 143, 0.2);
-	--treeDmax3   : rgba(0, 131, 143, 1);
-	--treeDmax4   : rgba(0, 131, 143, .3);
-	--Csharp1     : rgba(240, 240, 250, 1);
-	--Csharp2     : rgba(150, 85, 245, 0.2);
-	--Csharp3     : rgba(150, 85, 245, 1);
-	--Csharp4     : rgba(150, 85, 245, .3);
-	--android1    : rgba(240, 250, 240, 1);
-	--android2    : rgba(124, 179, 66, 0.2);
-	--android3    : rgba(124, 179, 66, 1);
-	--android4    : rgba(124, 179, 66, .3);
-	--twoD1       : rgba(250, 240, 245, 1);
-	--twoD2       : rgba(198, 13, 13, 0.2);
-	--twoD3       : rgba(198, 13, 13, 1);
-	--twoD4       : rgba(198, 13, 13, .3);
+	--section_size   : 1rem;
+	position         : relative;
+	overflow         : hidden;
+	--python1        : rgba(228, 242, 255, 1);
+	--python2        : rgba(2, 119, 189, 0.2);
+	--python3        : rgba(2, 119, 189, 1);
+	--python4        : rgba(2, 119, 189, .3);
+	--robo1          : rgba(250, 249, 240, 1);
+	--robo2          : rgba(69, 90, 100, 0.2);
+	--robo3          : rgba(69, 90, 100, 1);
+	--robo4          : rgba(69, 90, 100, .3);
+	--treeDmax1      : rgba(240, 249, 250, 1);
+	--treeDmax2      : rgba(0, 131, 143, 0.2);
+	--treeDmax3      : rgba(0, 131, 143, 1);
+	--treeDmax4      : rgba(0, 131, 143, .3);
+	--Csharp1        : rgba(240, 240, 250, 1);
+	--Csharp2        : rgba(150, 85, 245, 0.2);
+	--Csharp3        : rgba(150, 85, 245, 1);
+	--Csharp4        : rgba(150, 85, 245, .3);
+	--android1       : rgba(240, 250, 240, 1);
+	--android2       : rgba(124, 179, 66, 0.2);
+	--android3       : rgba(124, 179, 66, 1);
+	--android4       : rgba(124, 179, 66, .3);
+	--twoD1          : rgba(250, 240, 245, 1);
+	--twoD2          : rgba(198, 13, 13, 0.2);
+	--twoD3          : rgba(198, 13, 13, 1);
+	--twoD4          : rgba(198, 13, 13, .3);
 }
 
 .courses__inner {
@@ -556,7 +572,7 @@ i {
 
 
 .courses__inner>*:not(:last-child) {
-	margin-bottom   : 30px;
+	margin-bottom   : 3rem;
 }
 
 .courses__cards {
@@ -582,32 +598,29 @@ i {
 	transform   : scale(1.05);
 }
 
-.courses__card>*:not(:last-child) {
-	/* margin-bottom   : 1.5rem; */
-}
-
 .courses__card__img {
 	display           : flex;
 	justify-content   : center;
 	align-items       : center;
 	overflow          : hidden;
-	max-width         : 90px;
-	min-width         : 90px;
-	max-height        : 90px;
-	min-height        : 90px;
+	width             : calc(var(--section_size) * 9);
+	;
+	height   : calc(var(--section_size) * 9);
+	;
 }
 
 .courses__card__img>img {
-	max-width    : 100%;
-	max-height   : 100%;
+	width    : 100%;
+	height   : 100%;
 }
 
 .courses__card>*:nth-child(2) {
+	font-size     : calc(var(--section_size) * 2.4);
 	font-weight   : 700;
 }
 
 .courses__card>*:nth-child(3) {
-	font-size   : 2rem;
+	font-size   : calc(var(--section_size) * 2);
 }
 
 .courses__card__buttons {
@@ -617,7 +630,7 @@ i {
 }
 
 .courses__card__buttons>* {
-	font-size   : 2rem;
+	font-size   : calc(var(--section_size) * 2);
 }
 
 /* COURSES COLORS */
@@ -793,26 +806,25 @@ i {
 	display          : flex;
 	flex-direction   : column;
 	align-items      : center;
-	width            : 100%;
 	gap              : 3rem;
 	color            : white;
 }
 
 .videos__items {
 	display   : flex;
-	gap       : 30px;
+	gap       : 3rem;
 	width     : 100%;
 }
 
 .ytvideo {
 	width           : calc(100% / 3);
-	border-radius   : 20px;
-	border          : 10px solid white;
+	border-radius   : 3rem;
+	border          : .5rem solid white;
 	transition      : border .3s ease;
 }
 
 .ytvideo:hover {
-	border-width   : 0px;
+	border-width   : 0;
 }
 
 
@@ -896,10 +908,16 @@ i {
 	align-items   : center;
 }
 
+.faqq__contents>img {
+	width   : 20%;
+}
+
+
 .faqq__accordions {
 	display          : flex;
 	flex-direction   : column;
 	gap              : 2rem;
+	width            : 80%;
 }
 
 .accordion__head {
@@ -999,15 +1017,15 @@ i {
 }
 
 .contacts__inner {
-	display                                                                                   : grid;
-	grid-template-columns                                                                     : 1fr 1fr;
-	grid-column-gap                                                                           : 5rem;
-	/* justify-items                                                                          : center; */
-	align-items                                                                               : center;
+	display                 : grid;
+	grid-template-columns   : 1fr 1fr;
+	grid-column-gap         : 5rem;
+	align-items             : center;
 }
 
-.contacts__inner iframe {
-	border-radius   : 20px;
+.yamap {
+	border-radius   : 2rem;
+	width           : 100%;
 }
 
 .contacts__text {
@@ -1071,16 +1089,45 @@ footer p:nth-child(2) {
 
 
 /* MEDIA */
+@media (max-width: 1920px) {
+	html {
+		font-size   : 0.5208333333333333vw;
+	}
+
+	.main {
+		/* 10/1920*100 */
+		font-size        : 0.5208333333333333vw;
+		--section_size   : 0.5208333333333333vw;
+	}
+
+
+}
+
 @media (max-width: 1280px) {
+
+	/* CONTAINER */
+	.container {
+		width   : calc(90% + 30px);
+	}
+
+	/* HEADER */
 	.header {
 		width           : 100%;
 		border-radius   : 0;
 	}
+
 }
 
-@media (max-width    : 1100px) {}
+@media (max-width : 1100px) {
+	html {
+		font-size   : 1.5vw;
+	}
 
-@media (max-width: 960px) {
+	.container {
+		padding   : 4rem 15px;
+	}
+
+	/* HEADER */
 	.header {
 		font-size   : 1.4rem;
 	}
@@ -1097,11 +1144,173 @@ footer p:nth-child(2) {
 	.header__menu {
 		display   : block;
 	}
+
+	/* MAIN */
+	.main {
+		/* 12/1100*100 */
+		font-size        : 1.0909090909090911vw;
+		flex-direction   : column-reverse;
+		gap              : 5em;
+	}
+
+	.main__right {
+		width   : 50%;
+	}
+
+	/* WHO WE ARE */
+	.whoweare__inner {
+		flex-direction   : column-reverse;
+		align-items      : center;
+	}
+
+	.whoweare__img {
+		width       : 90%;
+		max-width   : 550px;
+	}
+
+	.whoweare__text {
+		margin      : 0 0 2em 0;
+		min-width   : 0;
+	}
+
+	.whoweare__text>h2 {
+		text-indent   : 0;
+		width         : max-content;
+		margin        : 0 auto;
+	}
+
+	/* WE DO */
+
+
+	.wedo__inner>*:not(:last-child) {
+		margin-bottom   : 2rem;
+	}
+
+	.wedo__item {
+		width             : 100%;
+		justify-content   : space-between;
+	}
+
+	.wedo i {
+		min-width     : 7rem;
+		line-height   : 7rem;
+		text-align    : center;
+	}
+
+	.wedo__item:not(:last-child) {
+		margin-right   : 0;
+	}
+
+	.wedo__first {
+		flex-direction   : column;
+		gap              : 2rem;
+	}
+
+	/* COURSES */
+
+	.courses {
+		/* 7.5/396*100 */
+		--section_size   : 1.9vw;
+	}
+
+	.courses__cards {
+		flex-direction   : column;
+		gap              : 3rem;
+	}
+
+	.courses__card {
+		width   : 100%;
+	}
+
+	/* VIDEOS */
+
+	.videos__inner {
+		text-align   : center;
+	}
+
+	.videos__items {
+		flex-direction   : column;
+		align-items      : center;
+	}
+
+	.ytvideo {
+		width   : 80%;
+	}
+
+	/* TEAM */
+	.team__inner>p {
+		width   : 100%;
+	}
+
+	.team__cards {
+		flex-wrap   : wrap;
+	}
+
+	.team__card {
+		width   : calc((100% - 3rem) / 2);
+	}
+
+	.team__card_first {
+		width   : 100%;
+	}
+
+	.team__card img {
+		/* border-radius   : 3rem; */
+		width    : 35vw;
+		height   : 35vw;
+	}
+
+	/* FAQ */
+	.faqq__accordions {
+		width   : 100%;
+	}
+
+	.faqq__contents>img {
+		display   : none;
+	}
+
+	/* CONTACTS */
+	.contacts__inner {
+		padding          : 4rem 0;
+		width            : 100%;
+		display          : flex;
+		flex-direction   : column-reverse;
+		gap              : 4rem;
+	}
+
+	.contacts__text {
+		padding   : 0 15px;
+		width     : calc(90% + 30px);
+	}
+
+	.contacts__text h2 {
+		width    : max-content;
+		margin   : 0 auto;
+	}
+
+	.contacts__buttons {
+		flex-direction   : column;
+	}
+
+	.contacts__buttons button {
+		width             : 100%;
+		justify-content   : center;
+	}
+
+	.yamap {
+		border-radius   : 0;
+	}
+
+
 }
+
+@media (max-width   : 960px) {}
 
 @media (max-width    : 770px) {}
 
 @media (max-width: 450px) {
+
+	/* HEADER */
 	.header {
 		padding   : 10px;
 	}
@@ -1114,9 +1323,9 @@ footer p:nth-child(2) {
 /* Блокировка кнопки входа */
 
 .header__auth {
-	/* display: none; */
+	display   : none;
 }
 
 .header__nav {
-	/* margin: 0 auto; */
+	margin   : 0 auto;
 }
